react hot reload with docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,6 @@ services:
     volumes:
       - /app/node_modules
       - .:/app
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    # command: tail -f /dev/null
